--- a/.github/workflows/update-readme.yaml
+++ b/.github/workflows/update-readme.yaml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Commit and Push Changes
         run: |
-          git config user.email "actions@github.com"
+          git config user.email $USER_EMAIL
           git config user.name "GitHub Actions"
           git add .
           git commit -m "Update .md"
