--- a/.github/workflows/update-readme.yaml
+++ b/.github/workflows/update-readme.yaml
@@ -29,8 +29,8 @@ jobs:
           USER_EMAIL: ${{ secrets.USER_EMAIL }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
-          git config user.email $USER_EMAIL
-          git config user.name "GitHub Actions"
+          git config user.email "${{ secrets.USER_EMAIL }}""
+          git config user.name "a6b8"
           git add .
           git commit -m "Update README"
           git remote add origin https://github.com/easyMina/.github.git
