--- a/.github/workflows/update-readme.yaml
+++ b/.github/workflows/update-readme.yaml
@@ -29,7 +29,7 @@ jobs:
           USER_EMAIL: ${{ secrets.USER_EMAIL }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
-          git config user.email "${{ secrets.USER_EMAIL }}""
+          git config user.email "${{ secrets.USER_EMAIL }}"
           git config user.name "a6b8"
           git add .
           git commit -m "Update README"
